[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Analog Stick/ControllerRadius.png" type="Texture" id=1]
[ext_resource path="res://AnalogControls/AnalogStickControls.gd" type="Script" id=2]
[ext_resource path="res://Assets/Analog Stick/ControllerPosition.png" type="Texture" id=3]
[ext_resource path="res://AnalogControls/RightSideControls.gd" type="Script" id=4]
[ext_resource path="res://AnalogControls/TouchScreenControlsLayer.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="TouchScreenControlsLayer" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="AnalogStickControls" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_right = 640.0
script = ExtResource( 2 )

[node name="AnalogStickArea" type="TouchScreenButton" parent="AnalogStickControls"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 128, 416 )
normal = ExtResource( 1 )
shape = SubResource( 1 )

[node name="AnalogStick" type="Sprite" parent="AnalogStickControls"]
position = Vector2( 228, 516 )
texture = ExtResource( 3 )

[node name="RightSideControls" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1280.0
margin_top = -720.0
script = ExtResource( 4 )

[node name="InteractButton" type="TouchScreenButton" parent="RightSideControls"]
modulate = Color( 0.580392, 0.576471, 0.262745, 1 )
position = Vector2( 992, 416 )
normal = ExtResource( 1 )

[connection signal="pressed" from="AnalogStickControls/AnalogStickArea" to="AnalogStickControls" method="_on_AnalogStickArea_pressed"]
[connection signal="released" from="AnalogStickControls/AnalogStickArea" to="AnalogStickControls" method="_on_AnalogStickArea_released"]
[connection signal="pressed" from="RightSideControls/InteractButton" to="RightSideControls" method="_on_InteractButton_pressed"]
